--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "CI=false react-scripts build"
+    "build": "CI=false react-scripts build",
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
