--- a/Dockerfile2
+++ b/Dockerfile2
@@ -29,6 +29,9 @@ FROM nginx:stable-perl
 # Copy only necessary files from the builder stage
 COPY --from=builder /app ./
 
+RUN sed -i 's|index  index.html index.htm;|try_files $uri $uri/ /index.html;|g' /etc/nginx/conf.d/default.conf
+RUN sed -i 's|root   /usr/share/nginx/html;|root   /var/lib/react/react-app/build;|g' /etc/nginx/conf.d/default.conf
+
 # Expose the port your app runs on
 EXPOSE 80
 
