--- a/Dockerfile2
+++ b/Dockerfile2
@@ -6,17 +6,14 @@ FROM node:20-alpine AS builder
 # Set working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json first to leverage Docker cache
-COPY package*.json ./
+# Copy the rest of the application code
+COPY . .
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
-COPY . .
-
-# Optional: Run build if you have a build step (e.g., for React, TypeScript, etc.)
-# RUN npm run build
+#Package Build
+RUN npm run build
 
 # =====================
 # Stage 2: Production Stage
